--- a/services/web/project/templates/root.html
+++ b/services/web/project/templates/root.html
@@ -1,34 +1,65 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<style>
+  .tweet-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  .tweet-table th, .tweet-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+
+  .tweet-table th {
+    background-color: #f2f2f2;
+  }
+
+  .tweet-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  .tweet-table tr:hover {
+    background-color: #ddd;
+  }
+</style>
 
 <h2>Recent Tweets</h2>
-<div class="tweets">
+<table class="tweet-table">
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>URL</th>
+      <th>Tweet</th>
+      <th>Created at</th>
+    </tr>
+  </thead>
+  <tbody>
     {% for tweet in tweets %}
-    <div class="tweet">
-        <div class="user-info">
-            <span class="user-name">{{ tweet.username }}</span>
-            <span class="url">{{ tweet.url }}</span>
-        </div>
-        <div class="tweet-content">
-            <p class="tweet-text">{{ tweet.text }}</p>
-	    <p class="created-at">Created at: {{ tweet.created_at }}</p>
-        </div>
-    </div>
+    <tr class="tweet">
+      <td>{{ tweet.username }}</td>
+      <td>twitter.com/{{ tweet.url }}</td>
+      <td>{{ tweet.text }}</td>
+      <td>{{ tweet.created_at }}</td>
+    </tr>
     {% endfor %}
-</div>
+  </tbody>
+</table>
 
 <div>
     {% if page_num > 1 %}
         <a href="?page={{ page_num - 1 }}" class="submit">Previous</a>
     {% endif %}
 
-    Page {{ page_num }} 
+    Page {{ page_num }}
 
     {% if tweets|length == 20 %}
         <a href="?page={{ page_num + 1 }}" class="submit">Next</a>
     {% endif %}
 </div>
 
-
 {% endblock %}
+
